--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h1>Route errors....</h1>
+
+[{{link-to "application" "application"}}]
+[{{link-to "apps.app.inbox" "apps.app.inbox"}}]
+
+<hr />
 
 {{outlet}}
