add spike of boot time error

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
 <h1>Route errors....</h1>
 
 [{{link-to "application" "application"}}]
+[{{link-to "apps.app" "apps.app"}}]
 [{{link-to "apps.app.inbox" "apps.app.inbox"}}]
 
 <hr />
